added check of projectability of short-circuited boolean expressions